crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041_1.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041_1.pyi:21:14: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
21 | def f0(arg1: float | int) -> None: ...  # PYI041
   |              ^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
18 18 | def good2(arg: int, arg2: int | bool) -> None: ...
19 19 | 
20 20 | 
21    |-def f0(arg1: float | int) -> None: ...  # PYI041
   21 |+def f0(arg1: float) -> None: ...  # PYI041
22 22 | 
23 23 | 
24 24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041

PYI041_1.pyi:24:30: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `float | complex`
   |
24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
21 21 | def f0(arg1: float | int) -> None: ...  # PYI041
22 22 | 
23 23 | 
24    |-def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
   24 |+def f1(arg1: float, *, arg2: list[str] | type[bool] | complex) -> None: ...  # PYI041
25 25 | 
26 26 | 
27 27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041

PYI041_1.pyi:27:28: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
   |                            ^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
24 24 | def f1(arg1: float, *, arg2: float | list[str] | type[bool] | complex) -> None: ...  # PYI041
25 25 | 
26 26 | 
27    |-def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
   27 |+def f2(arg1: int, /, arg2: float) -> None: ...  # PYI041
28 28 | 
29 29 | 
30 30 | def f3(arg1: int, *args: Union[int | int | float]) -> None: ...  # PYI041

PYI041_1.pyi:30:26: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
30 | def f3(arg1: int, *args: Union[int | int | float]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
27 27 | def f2(arg1: int, /, arg2: int | int | float) -> None: ...  # PYI041
28 28 | 
29 29 | 
30    |-def f3(arg1: int, *args: Union[int | int | float]) -> None: ...  # PYI041
   30 |+def f3(arg1: int, *args: float) -> None: ...  # PYI041
31 31 | 
32 32 | 
33 33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041

PYI041_1.pyi:33:24: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
34 |
35 | def f5(
   |
   = help: Remove redundant type

ℹ Safe fix
30 30 | def f3(arg1: int, *args: Union[int | int | float]) -> None: ...  # PYI041
31 31 | 
32 32 | 
33    |-async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
   33 |+async def f4(**kwargs: float) -> None: ...  # PYI041
34 34 | 
35 35 | def f5(
36 36 |     arg: Union[  # comment 

PYI041_1.pyi:36:10: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
35 |   def f5(
36 |       arg: Union[  # comment 
   |  __________^
37 | |         float, # another
38 | |         complex, int]
   | |_____________________^ PYI041 (redundant-numeric-union)
39 |       ) -> None: ...  # PYI041
   |
   = help: Remove redundant type

ℹ Unsafe fix
33 33 | async def f4(**kwargs: int | int | float) -> None: ...  # PYI041
34 34 | 
35 35 | def f5(
36    |-    arg: Union[  # comment 
37    |-        float, # another
38    |-        complex, int]
   36 |+    arg: complex
39 37 |     ) -> None: ...  # PYI041
40 38 | 
41 39 | def f6(

PYI041_1.pyi:43:9: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
41 |   def f6(
42 |       arg: (
43 | /         int | # comment
44 | |         float |  # another
45 | |         complex
   | |_______________^ PYI041 (redundant-numeric-union)
46 |       )    
47 |       ) -> None: ... # PYI041
   |
   = help: Remove redundant type

ℹ Unsafe fix
40 40 | 
41 41 | def f6(
42 42 |     arg: (
43    |-        int | # comment
44    |-        float |  # another
45 43 |         complex
46 44 |     )    
47 45 |     ) -> None: ... # PYI041

PYI041_1.pyi:49:26: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
47 |     ) -> None: ... # PYI041
48 |
49 | def f5(arg1: int, *args: Union[int, int, float]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
46 46 |     )    
47 47 |     ) -> None: ... # PYI041
48 48 | 
49    |-def f5(arg1: int, *args: Union[int, int, float]) -> None: ...  # PYI041
   49 |+def f5(arg1: int, *args: float) -> None: ...  # PYI041
50 50 | 
51 51 | 
52 52 | def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: ...  # PYI041

PYI041_1.pyi:52:26: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
52 | def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
49 49 | def f5(arg1: int, *args: Union[int, int, float]) -> None: ...  # PYI041
50 50 | 
51 51 | 
52    |-def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: ...  # PYI041
   52 |+def f6(arg1: int, *args: float) -> None: ...  # PYI041
53 53 | 
54 54 | 
55 55 | def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: ...  # PYI041

PYI041_1.pyi:55:26: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
55 | def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
52 52 | def f6(arg1: int, *args: Union[Union[int, int, float]]) -> None: ...  # PYI041
53 53 | 
54 54 | 
55    |-def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: ...  # PYI041
   55 |+def f7(arg1: int, *args: float) -> None: ...  # PYI041
56 56 | 
57 57 | 
58 58 | def f8(arg1: int, *args: Union[Union[Union[int | int | float]]]) -> None: ...  # PYI041

PYI041_1.pyi:58:26: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
58 | def f8(arg1: int, *args: Union[Union[Union[int | int | float]]]) -> None: ...  # PYI041
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
55 55 | def f7(arg1: int, *args: Union[Union[Union[int, int, float]]]) -> None: ...  # PYI041
56 56 | 
57 57 | 
58    |-def f8(arg1: int, *args: Union[Union[Union[int | int | float]]]) -> None: ...  # PYI041
   58 |+def f8(arg1: int, *args: float) -> None: ...  # PYI041
59 59 | 
60 60 | 
61 61 | class Foo:

PYI041_1.pyi:64:24: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
62 |     def good(self, arg: int) -> None: ...
63 |
64 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   |                        ^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
65 |
66 |     def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
   |
   = help: Remove redundant type

ℹ Safe fix
61 61 | class Foo:
62 62 |     def good(self, arg: int) -> None: ...
63 63 | 
64    |-    def bad(self, arg: int | float | complex) -> None: ...  # PYI041
   64 |+    def bad(self, arg: complex) -> None: ...  # PYI041
65 65 | 
66 66 |     def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
67 67 | 

PYI041_1.pyi:66:25: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
64 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
65 |
66 |     def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
67 |
68 |     def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
   |
   = help: Remove redundant type

ℹ Safe fix
63 63 | 
64 64 |     def bad(self, arg: int | float | complex) -> None: ...  # PYI041
65 65 | 
66    |-    def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
   66 |+    def bad2(self, arg: complex) -> None: ...  # PYI041
67 67 | 
68 68 |     def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
69 69 | 

PYI041_1.pyi:68:25: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
66 |     def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
67 |
68 |     def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
69 |
70 |     def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
   |
   = help: Remove redundant type

ℹ Safe fix
65 65 | 
66 66 |     def bad2(self, arg: int | Union[float, complex]) -> None: ...  # PYI041
67 67 | 
68    |-    def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
   68 |+    def bad3(self, arg: complex) -> None: ...  # PYI041
69 69 | 
70 70 |     def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
71 71 | 

PYI041_1.pyi:70:25: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
68 |     def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
69 |
70 |     def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
71 |
72 |     def bad5(self, arg: int | (float | complex)) -> None: ...  # PYI041
   |
   = help: Remove redundant type

ℹ Safe fix
67 67 | 
68 68 |     def bad3(self, arg: Union[Union[float, complex], int]) -> None: ...  # PYI041
69 69 | 
70    |-    def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
   70 |+    def bad4(self, arg: complex) -> None: ...  # PYI041
71 71 | 
72 72 |     def bad5(self, arg: int | (float | complex)) -> None: ...  # PYI041
73 73 | 

PYI041_1.pyi:72:25: PYI041 (redundant-numeric-union) [*] Use `complex` instead of `int | float | complex`
   |
70 |     def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
71 |
72 |     def bad5(self, arg: int | (float | complex)) -> None: ...  # PYI041
   |                         ^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
69 69 | 
70 70 |     def bad4(self, arg: Union[float | complex, int]) -> None: ...  # PYI041
71 71 | 
72    |-    def bad5(self, arg: int | (float | complex)) -> None: ...  # PYI041
   72 |+    def bad5(self, arg: complex) -> None: ...  # PYI041
73 73 | 
74 74 | 
75 75 | # https://github.com/astral-sh/ruff/issues/18298

PYI041_1.pyi:78:23: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
76 | # fix must not yield runtime `None | None | ...` (TypeError)
77 | class Issue18298:
78 |     def f1(self, arg: None | int | None | float = None) -> None: ...  # PYI041 - with fix
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
79 |
80 |     def f3(self, arg: None | float | None | int | None = None) -> None: ...  # PYI041 - with fix
   |
   = help: Remove redundant type

ℹ Safe fix
75 75 | # https://github.com/astral-sh/ruff/issues/18298
76 76 | # fix must not yield runtime `None | None | ...` (TypeError)
77 77 | class Issue18298:
78    |-    def f1(self, arg: None | int | None | float = None) -> None: ...  # PYI041 - with fix
   78 |+    def f1(self, arg: None | None | float = None) -> None: ...  # PYI041 - with fix
79 79 | 
80 80 |     def f3(self, arg: None | float | None | int | None = None) -> None: ...  # PYI041 - with fix

PYI041_1.pyi:80:23: PYI041 (redundant-numeric-union) [*] Use `float` instead of `int | float`
   |
78 |     def f1(self, arg: None | int | None | float = None) -> None: ...  # PYI041 - with fix
79 |
80 |     def f3(self, arg: None | float | None | int | None = None) -> None: ...  # PYI041 - with fix
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
   |
   = help: Remove redundant type

ℹ Safe fix
77 77 | class Issue18298:
78 78 |     def f1(self, arg: None | int | None | float = None) -> None: ...  # PYI041 - with fix
79 79 | 
80    |-    def f3(self, arg: None | float | None | int | None = None) -> None: ...  # PYI041 - with fix
   80 |+    def f3(self, arg: None | float | None | None = None) -> None: ...  # PYI041 - with fix
