crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI041_PYI041_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI041_2.py:7:23: PYI041 (redundant-numeric-union) Use `float` instead of `int | float`
  |
5 | # fix must not yield runtime `None | None | ...` (TypeError)
6 | class Issue18298:
7 |     def f1(self, arg: None | int | None | float = None) -> None:
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^ PYI041 (redundant-numeric-union)
8 |         pass
  |
  = help: Remove redundant type
